# otk

./: .gitignore  .ocamlformat  README.md  dune-project  lefthook.yml  otk.opam  otk.opam.locked
.github/workflows/: ci.yml
docs/style/: general_guidelines.md  upenn.md
hooks/opencode/: otk.ts
lib/: command.ml  dune  filter.ml  runner.ml
test/: dune  test_otk.ml
