opam-version: "2.0"
name: "otk"
version: "0.1.0"
synopsis: "OCaml Token Killer — compact shell output for LLMs"
maintainer: "hpietukhin"
authors: ["hpietukhin"]
homepage: "https://github.com/hpietukhin/otk"
bug-reports: "https://github.com/hpietukhin/otk/issues"
license: "MIT"
depends: [
  "ocaml"   { >= "5.2" }
  "dune"    { >= "3.0" }
  "angstrom"
  "alcotest"    { with-test }
  "ocamlformat" { with-dev-setup }
]
build: [ "dune" "build" "-p" name "-j" jobs ]
